--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
 @tailwind components;
 @tailwind utilities;
 
-/* Oriental Computer Institute Design System - Ganpati Theme */
+/* IT - Oriental Computer Institute Design System - Ganpati Theme */
 
 @layer base {
   :root {
